--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.4",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-base64": "^0.2.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-stack-navigation": "^1.0.1",
-    "expo-camera": "~13.2.1"
+    "expo-updates": "~0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
