--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo-camera": "~13.2.1",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
+    "moment": "^2.29.4",
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
@@ -26,8 +28,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-stack-navigation": "^1.0.1",
-    "expo-updates": "~0.16.3"
+    "react-stack-navigation": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
