--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.4",
     "expo-camera": "~13.2.1",
+    "expo-device": "^5.2.1",
     "expo-image-picker": "^14.1.1",
+    "expo-notifications": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
+    "fast-levenshtein": "^3.0.0",
     "moment": "^2.29.4",
     "parse": "^4.0.1",
     "react": "18.2.0",
